# scalarhackathon

./: Dockerfile  README.md  app.py  env.py  inference.py  interference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
