[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server", "env"]

[project]
name = "ticket-routing-env"
version = "0.1.0"
description = "Customer support ticket classification OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "openenv-core>=0.2.0",
    "openai",
    "pydantic",
    "uvicorn",
]

[project.scripts]
server = "server.app:main"
ticket-server = "server.app:main"
ticket-cli = "server.app:cli_main"
